Signup implementation. also some part of the  buyer-dashboard

--- a/public/app.less
+++ b/public/app.less
@@ -41,6 +41,7 @@
 
 @import 'less/sk_style.less';
 @import 'less/login.less';
+@import 'less/signup.less';
 @import 'less/dashboard.less';
 @import 'less/add-edit-item.less';
 @import 'directives/directives.less';
