--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -31,4 +31,27 @@
       overflow: visible !important;
     }
   }
+
+  #topCarousel{
+    .image{
+      width: 59% !important;
+      display: inline-block !important;
+    }
+
+    .top-carousel-caption{
+      width: 39% !important;
+      display: inline-block !important;
+    }
+
+    .top-carousel-caption{
+      color: #000 !important;
+    }
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+        width: 70%;
+        height: 450px;
+        margin: auto;
+    }
+
+  }
 }
