--- a/public/views/login.html
+++ b/public/views/login.html
@@ -15,6 +15,12 @@
             <button type="reset" class="btn btn-danger margin-v" ng-click="clear()">Clear</button>
             <button type="submit" class="btn btn-primary margin-v" ng-click="submit()" ng-disabled="!user.username || !user.password">Login</button>
           </div>
+
+          <div class="right text-align-right">
+            <span class="margin-v">Not register yet ? </span>
+            <button type="submit" class="btn btn-primary margin-v" ng-click="signup()">Sign Up</button>
+          </div>
+
       </div>
     </form>
   </div>
