--- a/public/views/buyer-dashboard.html
+++ b/public/views/buyer-dashboard.html
@@ -1,9 +1,68 @@
 <div class="dashboard-content hundred-percent">
   <div ng-controller="buyerDashboardController">
 
-    <div class="eighty-percent text-align-center">
-      <h1>Buyer's Dashboard</h1>
+    <div class="block text-align-center">
+      <h2>Welcome the festive season with bang..</h2>
     </div>
+
+    <div class="carousel-body">
+      <div id="topCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#topCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#topCarousel" data-slide-to="1"></li>
+          <li data-target="#topCarousel" data-slide-to="2"></li>
+          <li data-target="#topCarousel" data-slide-to="3"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="images/lenovo-z51.png" class="image img-responsive" alt="Chania">
+            <div class="top-carousel-caption" >
+              <h3>Chania</h3>
+              <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="images/monitor.png" class="image img-responsive" alt="Chania">
+            <div class="top-carousel-caption">
+              <h3>Chania</h3>
+              <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="images/xiaomi_mi_3.png" class="image img-responsive" alt="Flower">
+            <div class="top-carousel-caption">
+              <h3>Flowers</h3>
+              <p>Beatiful flowers in Kolymbari, Crete.</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="images/quechua.png" class="image img-responsive" alt="Flower">
+            <div class="top-carousel-caption">
+              <h3>Flowers</h3>
+              <p>Beatiful flowers in Kolymbari, Crete.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#topCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#topCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+
+
 
 
   </div>
