--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -15,6 +15,20 @@
       border-top: 2px solid @colorInfo;
     }
 
+    .heading{
+      width: 83%;
+      display: inline-block;
+
+      h2{
+        margin-left: 17% !important;
+      }
+    }
+
+    .buttons{
+      width: 16%;
+      display: inline-block;
+    }
+
     .add-new{
       margin: 20 20 10 0;
       vertical-align: super;
