--- a/public/views/merchant-dashboard.html
+++ b/public/views/merchant-dashboard.html
@@ -23,8 +23,12 @@
       </div>
 
       <div class="buttons">
-        <button class="btn btn-primary add-new margin-v" ng-click='addNewItem()'>Add New</button>
-        <button class="btn btn-primary add-new" data-toggle="modal" data-target="#bulkItemUpload">Add Bulk</button>
+        <button class="btn btn-primary add-new margin-v" ng-click='addNewItem()'>
+          <i class="icon-plus"></i> Add New
+        </button>
+        <button class="btn btn-primary add-new" data-toggle="modal" data-target="#bulkItemUpload">
+          <i class="icon-plus"></i> Add Bulk
+        </button>
       </div>
 
       <div id="bulkItemUpload" class="modal fade" role="dialog">
