--- a/public/app.css
+++ b/public/app.css
@@ -254,6 +254,9 @@ body {
     padding: 0;
     margin: 0 auto;
   }
+  .login-content .login-container button {
+    width: 33% !important;
+  }
 }
 @media (min-width: 521px) and (max-width: 800px) {
   .login-content {
@@ -265,6 +268,9 @@ body {
     display: inline-block;
     padding: 0;
     margin: 0 auto;
+  }
+  .login-content .login-container button {
+    width: 33% !important;
   }
 }
 .signup-content .container {
@@ -321,11 +327,12 @@ body {
   padding: 1em;
   overflow: visible !important;
 }
-.dashboard-content .stats-display svg line .c3-grid-focus {
+.dashboard-content .stats-display svg g .c3-xgrid-focus line {
   visibility: hidden !important;
 }
 .dashboard-content #topCarousel .image {
-  width: 59% !important;
+  width: 39% !important;
+  margin-left: 10% !important;
   display: inline-block !important;
 }
 .dashboard-content #topCarousel .top-carousel-caption {
@@ -340,6 +347,32 @@ body {
   width: 70%;
   height: 450px;
   margin: auto;
+}
+.dashboard-content #topCarousel .item img {
+  max-height: 300px;
+}
+.dashboard-content #topCarousel ol li {
+  background-color: rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.4);
+}
+.dashboard-content #topCarousel ol li:active {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.dashboard-content #topCarousel .carousel-control {
+  position: absolute;
+  width: 10%;
+  top: 0;
+  bottom: 0;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  filter: alpha(opacity=50);
+  opacity: .5;
+}
+.dashboard-content #topCarousel .carousel-control .right,
+.dashboard-content #topCarousel .carousel-control .left {
+  position: absolute !important;
 }
 @media (max-width: 600px) {
   .stats-display {
