--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -38,15 +38,22 @@
       padding: 1em;
       overflow: visible !important;
 
-      line .c3-grid-focus{
-        visibility: hidden !important;
+      g{
+        .c3-xgrid-focus{
+          line{
+            visibility: hidden !important;
+          }
+        }
       }
     }
   }
 
   #topCarousel{
+    // margin: 0 auto;
+
     .image{
-      width: 59% !important;
+      width: 39% !important;
+      margin-left: 10% !important;
       display: inline-block !important;
     }
 
@@ -65,6 +72,42 @@
         margin: auto;
     }
 
+    .item{
+      img{
+        max-height: 300px;
+      }
+    }
+
+    ol{
+      // background-color: #fff !important;
+
+      li{
+          background-color: rgba(0,0,0,0.2);
+          border: 1px solid rgba(0,0,0,0.4);
+      }
+
+      li:active{
+        background-color: rgba(0, 0, 0, 0.3);
+      }
+    }
+
+    .carousel-control {
+      position: absolute;
+      width: 10%;
+      top: 0;
+      bottom: 0;
+      // left: 0;
+      font-size: 20px;
+      color: #fff;
+      text-align: center;
+      text-shadow: 0 1px 2px rgba(0,0,0,.6);
+      filter: alpha(opacity=50);
+      opacity: .5;
+
+      .right, .left{
+        position: absolute !important;
+      }
+    }
   }
 }
 
