--- a/public/less/login.less
+++ b/public/less/login.less
@@ -79,6 +79,10 @@
     padding: 0;
     margin: 0 auto;
   }
+
+  .login-content .login-container button {
+    width: 33% !important;
+  }
 }
 
 @media (min-width: 521px) and (max-width: 800px){
@@ -92,5 +96,9 @@
     display: inline-block;
     padding: 0;
     margin: 0 auto;
+  }
+
+  .login-content .login-container button {
+    width: 33% !important;
   }
 }
