--- a/public/views/buyer-dashboard.html
+++ b/public/views/buyer-dashboard.html
@@ -13,54 +13,68 @@
           <li data-target="#topCarousel" data-slide-to="1"></li>
           <li data-target="#topCarousel" data-slide-to="2"></li>
           <li data-target="#topCarousel" data-slide-to="3"></li>
+          <li data-target="#topCarousel" data-slide-to="4"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="images/lenovo-z51.png" class="image img-responsive" alt="Chania">
+            <img src="{{items[0].img}}" class="image img-responsive" alt="{{items[0].alt}}">
             <div class="top-carousel-caption" >
-              <h3>Chania</h3>
-              <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+              <h3>{{items[0].name}}</h3>
+              <p>{{items[0].details.substring(0,150)}}...</p>
             </div>
           </div>
 
           <div class="item">
-            <img src="images/monitor.png" class="image img-responsive" alt="Chania">
+            <img src="{{items[1].img}}" class="image img-responsive" alt="{{items[1].alt}}">
             <div class="top-carousel-caption">
-              <h3>Chania</h3>
-              <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+              <h3>{{items[1].name}}</h3>
+              <p>{{items[1].details.substring(0,150)}}...</p>
             </div>
           </div>
 
           <div class="item">
-            <img src="images/xiaomi_mi_3.png" class="image img-responsive" alt="Flower">
+            <img src="{{items[2].img}}" class="image img-responsive" alt="{{items[2].alt}}">
             <div class="top-carousel-caption">
-              <h3>Flowers</h3>
-              <p>Beatiful flowers in Kolymbari, Crete.</p>
+              <h3>{{items[2].name}}</h3>
+              <p>{{items[2].details.substring(0,150)}}...</p>
             </div>
           </div>
 
           <div class="item">
-            <img src="images/quechua.png" class="image img-responsive" alt="Flower">
+            <img src="{{items[3].img}}" class="image img-responsive" alt="{{items[3].alt}}">
             <div class="top-carousel-caption">
-              <h3>Flowers</h3>
-              <p>Beatiful flowers in Kolymbari, Crete.</p>
+              <h3>{{items[3].name}}</h3>
+              <p>{{items[3].details.substring(0,150)}}...</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="{{items[4].img}}" class="image img-responsive" alt="{{items[4].alt}}">
+            <div class="top-carousel-caption">
+              <h3>{{items[4].name}}</h3>
+              <p>{{items[4].details.substring(0,150)}}...</p>
             </div>
           </div>
         </div>
 
         <!-- Left and right controls -->
-        <a class="left carousel-control" href="#topCarousel" role="button" data-slide="prev">
+
+        <a class="left carousel-control" href="{{url}}#topCarousel" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#topCarousel" role="button" data-slide="next">
+
+        <a class="right carousel-control" href="{{url}}#topCarousel" role="button" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
+
+
       </div>
     </div>
+
 
 
 
