--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -48,6 +48,34 @@
     }
   }
 
+  .user-search{
+    margin: 1em;
+    width: 97%;
+    display: inline-block;
+    text-align: right;
+
+    input{
+      width: 25%;
+    }
+
+    i{
+      font-size: 26px;
+      position: relative;
+      top: 8px;
+      right: 27px;
+    }
+  }
+
+  .product{
+    text-align: center;
+
+    h4{
+      text-align: left;
+      padding-left: 2em;
+    }
+  }
+
+
   #topCarousel{
     // margin: 0 auto;
 
