--- a/public/directives/directives.less
+++ b/public/directives/directives.less
@@ -25,6 +25,32 @@ xor-item-snapshot{
 }
 
 
+xor-product-card{
+  .list-item-box{
+    border: 1px solid #000;
+    border-radius: 10px;
+    padding: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+
+    img{
+      height: 200px;
+      width: 200px;
+    }
+
+    a{
+      text-decoration: none;
+      // color: @fontColorDanger;
+      display: block;
+      text-align: left;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+
+  }
+}
+
 @media (max-width: 600px) {
   xor-item-snapshot{
     img, .description{
