--- a/public/app.less
+++ b/public/app.less
@@ -39,6 +39,25 @@
   }
 }
 
+// for ng-show / ng-hide
+.animate-show {
+  line-height: 20px;
+  opacity: 1;
+  padding: 10px 0;
+  // border: 1px solid black;
+  // background: white;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+  transition: all linear 0.5s;
+}
+
+.animate-show.ng-hide {
+  line-height: 0;
+  opacity: 0;
+  padding: 0 10px;
+}
+
 @import 'less/sk_style.less';
 @import 'less/login.less';
 @import 'less/signup.less';
