--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -66,6 +66,10 @@
     }
   }
 
+  #search-results{
+    display: none;
+  }
+  
   .product{
     text-align: center;
 
@@ -73,6 +77,7 @@
       text-align: left;
       padding-left: 2em;
     }
+
   }
 
 
