--- a/public/views/edit-item.html
+++ b/public/views/edit-item.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="form-group" class="block">
-              <label class="block">Cost Price</label>
+              <label class="block">Discount %</label>
               <input type="text" class="block ninety-percent" tooltip="Happening discount..." ng-model="obj.price.discount"/>
             </div>
 
