--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,4 +1,4 @@
-<div class="signup-content" ng-controller = "signupController">
+<div class="signup-content" data-ng-controller = "signupController">
 
   <div class="ninety-percent margin-a pad-a container">
     <h3 class="heading">Hola new user.. Explore the shopping world..</h3>
