--- a/public/views/buyer-dashboard.html
+++ b/public/views/buyer-dashboard.html
@@ -1,5 +1,5 @@
 <div class="dashboard-content hundred-percent">
-  <div ng-controller="buyerDashboardController">
+  <div data-ng-controller="buyerDashboardController">
 
     <div class="block text-align-center">
       <h2>Welcome the festive season with bang..</h2>
