--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,4 +1,4 @@
-<div class="login-content" ng-controller = "loginController as login">
+<div class="login-content" data-ng-controller = "loginController">
   <div class="offers-display left">
     <img src="images/xoriant_logo.png" class="eighty-percent img-rounded img-responsive pad-v"></img>
   </div>
@@ -7,13 +7,13 @@
       <form class="inline">
         <div class="login-container form-group round-corner-bottom">
           <label>Username</label>
-          <input type="email" placeholder="Username" ng-model="user.username"></input>
+          <input type="text" placeholder="Username" ng-model="userCredentials.username"></input>
           <label>Password</label>
-          <input type="password" placeholder="Password" ng-model="user.password"></input>
+          <input type="password" placeholder="Password" ng-model="userCredentials.password"></input>
           <h6 class="error-message" ng-show="errorMessage"><i>*{{errorMessage}}</i></h6>
           <div class="right">
             <button type="reset" class="btn btn-danger margin-v" ng-click="clear()">Clear</button>
-            <button type="submit" class="btn btn-primary margin-v" ng-click="submit()" ng-disabled="!user.username || !user.password">Login</button>
+            <button type="submit" class="btn btn-primary margin-v" ng-click="submit()" ng-disabled="!userCredentials.username || !userCredentials.password">Login</button>
           </div>
 
           <div class="right text-align-right">
