--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -16,7 +16,7 @@
       <div class="form-group">
         <label class="inline-block thirty-percent">Register as</label>
         <input type="radio" ng-model="user.role" value="buyer">Buyer</input>
-        <input type="radio" class="margin-h" ng-model="user.role" value="merchant">Seller</input>
+        <input type="radio" class="margin-h" ng-model="user.role" value="seller">Seller</input>
       </div>
 
       <div class="form-group">
