--- a/public/views/merchant-dashboard.html
+++ b/public/views/merchant-dashboard.html
@@ -56,7 +56,10 @@
       </div>
 
       <div class='item-list hundred-percent margin-v'>
-        <xor-item-snapshot ng-repeat="item in items track by item.id" obj="item"></xor-item-snapshot>
+        <span ng-repeat="item in items track by item.id">{{item}}
+          <xor-item-snapshot ng-repeat="i in item track by $index" obj="i">{{i}}</xor-item-snapshot>
+          <!-- <xor-item-snapshot ng-repeat="i in item" obj="i"></xor-item-snapshot> -->
+        </span>
       </div>
     </div>
 
