seller dashboard added

--- a/public/directives/directives.less
+++ b/public/directives/directives.less
@@ -22,6 +22,11 @@ xor-item-snapshot{
       overflow: hidden;
     }
   }
+
+  ul{
+    list-style: none !important
+    margin-left: 0;
+  }
 }
 
 
