--- a/public/views/seller-dashboard.html
+++ b/public/views/seller-dashboard.html
@@ -55,9 +55,19 @@
         </div>
       </div>
 
+      <script>
+        console.log("in ui results count : ", $scope.items.length());
+      </script>
+
       <div class='item-list hundred-percent margin-v'>
-        <xor-item-snapshot ng-repeat="item in items track by item.id" obj="item"></xor-item-snapshot>
-      </div>
+       <xor-item-snapshot ng-repeat="item in items track by item._id" obj="item"></xor-item-snapshot>
+       <!-- <span ng-repeat="item in items">
+         {{item._id}}
+       </span> -->
+       <span>
+
+       </span>
+     </div>
     </div>
 
   </div>
