Added routing and page for detailed view for product

--- a/public/views/buyer-dashboard.html
+++ b/public/views/buyer-dashboard.html
@@ -83,7 +83,7 @@
 
     <div class="product margin-a">
       <h4 class="block">Recommendations for you..</h4>
-      <xor-product-card ng-repeat="item in items track by item._id" obj="item"></xor-product-card>
+      <xor-product-card ng-repeat="item in recommendations track by item._id" obj="item"></xor-product-card>
     </div>
 
 
