Revised edit product.

--- a/public/views/edit-item.html
+++ b/public/views/edit-item.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="left-section fifty-percent img-display">
-    <img src="{{obj.img}}" alt="{{obj.alt}}" class="img-responsive"/>
+    <img src="data:image/jpeg;base64, {{obj.image}}" alt="{{obj.alt}}" class="img-responsive"/>
 
     <div class="image-roller">
       <img src="" alt=""/>
