--- a/public/directives/directives.less
+++ b/public/directives/directives.less
@@ -24,8 +24,8 @@ xor-item-snapshot{
   }
 
   ul{
-    list-style: none !important
-    margin-left: 0;
+    list-style: none !important;
+    padding-left: 15px;
   }
 }
 
