--- a/public/views/add-Product.html
+++ b/public/views/add-Product.html
@@ -1,4 +1,4 @@
-<div class="edit-item-content hundred-percent add-edit-info"  data-ng-controller="addNewItemController">
+<div class="edit-item-content hundred-percent add-edit-info margin-v"  data-ng-controller="addNewItemController">
 
   <div class="block" style="border-bottom: 2px solid green; margin-bottom: 1em;">
     <h3 class="block text-align-center">Add/Edit Item</h3>
