--- a/public/less/sk_style.less
+++ b/public/less/sk_style.less
@@ -126,6 +126,31 @@
 .lowercase{
   text-transform: lowercase;
 }
+// ----------------- fonts wieghts ----------------------------------------
+
+.font-weight-100{
+  font-weight: 100;
+}
+
+.font-weight-200{
+  font-weight: 200;
+}
+
+.font-weight-300{
+  font-weight: 300;
+}
+
+.font-weight-bold{
+  font-weight: bold;
+}
+
+.font-weight-bolder{
+  font-weight: bolder;
+}
+
+.font-weight-lighter{
+  font-weight: lighter;
+}
 
 
 //------------------ default padding ---------------------------------------
