--- a/public/views/detailed-product-description.html
+++ b/public/views/detailed-product-description.html
@@ -1,7 +1,9 @@
-<div class="edit-item-content hundred-percent add-edit-info"  data-ng-controller="detailedProductViewController">
+<!-- less file used for this page is add-edit-item.less as most of the fields are same on this page  -->
 
-  <div class="left-section fifty-percent img-display">
-    <img src="data:image/jpeg;base64,{{obj.image}}" alt="{{obj.name}}" class="img-responsive"/>
+<div class="edit-item-content hundred-percent add-edit-info" id="product-details"  data-ng-controller="detailedProductViewController">
+
+  <div class="left-section fifty-percent img-display margin-v">
+    <img src="data:image/jpeg;base64,{{obj.image}}" alt="{{obj.name}}" class="img-responsive margin-v"/>
 
     <!-- <div class="image-roller">
       <img src="" alt=""/>
@@ -11,61 +13,61 @@
     </div> -->
   </div>
 
-  <div class="right-section fifty-percent">
+  <div class="right-section fifty-percent margin-v">
     <form class="inline">
 
       <div class="form-group">
         <label class="block">Name</label>
-        <span class="block ninety-percent">{{obj.name}}</span>
+        <span class="block ninety-percent font-weight-lighter">{{obj.name}}</span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block"> Category</label>
-        <span class="block ninety-percent">{{obj.category}}</span>
+        <span class="block ninety-percent font-weight-lighter capitalize">{{obj.category}}</span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Sub-Category</label>
-        <span class="block ninety-percent">{{obj.sub_category}}</span>
+        <span class="block ninety-percent font-weight-lighter capitalize">{{obj.sub_category}}</span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Cost Price</label>
-        <span class="block ninety-percent" tooltip="INR">{{obj.pricing.cost_price}}</span>
+        <span class="block ninety-percent font-weight-lighter" tooltip="INR">{{obj.pricing.cost_price}}</span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Discount (%)</label>
-        <span class="block ninety-percent" tooltip="%">{{obj.pricing.discount}}</span>
+        <span class="block ninety-percent font-weight-lighter" tooltip="%">{{obj.pricing.discount}}</span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Effective Price</label>
-        <span class="block ninety-percent" tooltip="INR">{{obj.pricing.selling_price}}</span>
+        <span class="block ninety-percent font-weight-lighter" tooltip="INR">{{obj.pricing.selling_price}}</span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Specifications</label>
-        <span class="block ninety-percent" ng-repeat="spec in obj.specifications track by $index">{{spec}}<br/></span>
+        <span class="block ninety-percent font-weight-lighter capitalize" ng-repeat="spec in obj.specifications track by $index">{{spec}}<br/></span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Features</label>
-        <span class="block ninety-percent" ng-repeat="feat in obj.features track by $index">{{feat}}</span>
+        <span class="block ninety-percent font-weight-lighter capitalize" ng-repeat="feat in obj.features track by $index">{{feat}}</span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Cities we deliver in </label>
-        <span class="block ninety-percent" ng-repeat="city in obj.cities_for_delivery track by $index">{{city}}</span>
+        <span class="block ninety-percent font-weight-lighter capitalize" ng-repeat="city in obj.cities_for_delivery track by $index">{{city}}</span>
       </div>
 
       <div class="form-group" class="block">
         <label class="block">Available stocks </label>
-        <span class="block ninety-percent">{{obj.items_in_stock}}</span>
+        <span class="block ninety-percent font-weight-lighter">{{obj.items_in_stock}}</span>
       </div>
 
       <div class="block text-align-right ninety-percent" style="margin: 1px;">
-        <button class="btn btn-primary twenty-percent" ng-click="updateItemInfo()">Add to cart</button>
+        <button class="btn btn-primary twenty-percent" ng-click="updateItemInfo()"><i class="icon-addtocart"></i> Add to cart </button>
       </div>
     </form>
   </div>
