--- a/public/directives/directives.less
+++ b/public/directives/directives.less
@@ -37,6 +37,7 @@ xor-product-card{
     padding: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
+    cursor: pointer;
 
     img{
       height: 200px;
