--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -69,13 +69,13 @@
   #search-results{
     display: none;
   }
-  
+
   .product{
-    text-align: center;
+    text-align: left;
+    padding-left: 2em;
 
     h4{
       text-align: left;
-      padding-left: 2em;
     }
 
   }
