--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -75,7 +75,7 @@
         <textarea rows="3" class="inline-block seventy-percent" placeholder="Please enter your address.." ng-model="user.address.street" name="street" required=""></textarea>
         <div ng-show="form.$submitted || form.street.$touched">
           <label class="inline-block seventy-percent error-message" ng-show="form.street.$error.required"> Dont you want to recieve your orders ?</label>
-        </div>  
+        </div>
       </div>
 
       <div class="form-group">
@@ -110,5 +110,23 @@
 
     </form>
   </div>
-
+  <div id="registration-success" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title pad-h">Congratulations..</h4>
+        </div>
+        <div class="modal-body">
+          <br/>
+          <span>You have been registered successfully.</span>
+          <br/>
+          <span>Please login to enjoy..</span>
+          <br/>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal" data-target="#registration-success" ng-click="navigateToLogin()">Thanks</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
